--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,66 @@
-asfgag
+@font-face {
+    font-family: 'advent pro';
+    src: url('fonts/adventpro-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'brawler';
+    src: url('fonts/brawler-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+	background-color: #afafaf;
+}
+
+p {
+	font-family: 'advent pro', sans-serif;
+	font-size: 18px;
+}
+
+h2 {
+	font-family: 'brawler', serif;
+	color: red;
+}
+
+header {
+	background-color: #000;
+	padding: 10px 0;
+	margin-bottom: 30px;
+}
+
+header ul {
+	padding: 0;
+	margin: 0;
+	text-align: center;
+}
+
+header ul li {
+	display: inline;
+	list-style-type: none;
+	margin: 0 50px;
+}
+
+header ul li a {
+	color: red;
+	font-size: 19px;
+}
+
+.about-img {
+	border: #000 solid 4px; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
